--- a/RutasCompartidas.Web/appsettings.json
+++ b/RutasCompartidas.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=WILMAR\\SQLEXPRESS;Database=RutasCompartidasDB;Trusted_Connection=True;TrustServerCertificate=True"
+    }
 }
