--- a/RutasCompartidas.Infrastructure/RutasCompartidas.Infrastructure.csproj
+++ b/RutasCompartidas.Infrastructure/RutasCompartidas.Infrastructure.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RutasCompartidas.Domain\RutasCompartidas.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
