--- a/RutasCompartidas.Application/RutasCompartidas.Application.csproj
+++ b/RutasCompartidas.Application/RutasCompartidas.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RutasCompartidas.Infrastructure\RutasCompartidas.Infrastructure.csproj" />
+    <ProjectReference Include="..\RutasCompartidas.Domain\RutasCompartidas.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
