--- a/RutasCompartidas.Web/RutasCompartidas.Web.csproj
+++ b/RutasCompartidas.Web/RutasCompartidas.Web.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RutasCompartidas.Infrastructure\RutasCompartidas.Infrastructure.csproj" />
+    <ProjectReference Include="..\RutasCompartidas.Application\RutasCompartidas.Application.csproj" />
   </ItemGroup>
 
 </Project>
