--- a/RutasCompartidas.Api/appsettings.json
+++ b/RutasCompartidas.Api/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=WILMAR\\SQLEXPRESS;Database=RutasCompartidasDB;Trusted_Connection=True;TrustServerCertificate=True"
     }
-  },
-  "AllowedHosts": "*"
 }
